# ducker

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yaml
public/: live2d.min.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: app_init.rs  core.rs  handle.rs  mod.rs  timer.rs
src-tauri/src/core/cmd/: action.rs  config.rs  mod.rs  sound.rs  task.rs  window.rs
src-tauri/src/core/tray/: mod.rs
src-tauri/src/core/window/: config.rs  manager.rs  mod.rs  schema.rs
src-tauri/src/feat/: action.rs  mod.rs  window.rs
src-tauri/src/module/: auto_launch.rs  lightweight.rs  mod.rs
src-tauri/src/process/: async_handler.rs
src-tauri/src/schema/: action.rs  dto.rs  mod.rs  periodic.rs  state.rs  task.rs  window.rs
src-tauri/src/service/: execute.rs  hub.rs  mod.rs  periodic.rs  schedule.rs
src-tauri/src/store/: db.rs  mod.rs  module.rs
src-tauri/src/store/implementation/: action_manager.rs  mod.rs  periodic_task_manager.rs  task_manager.rs
src-tauri/src/utils/: date.rs  dirs.rs  help.rs  i18n.rs  init.rs  logging.rs  macros.rs  mod.rs  resolve.rs  singleton.rs  sound.rs  window_manager.rs
src/api/: index.ts
src/assets/: Dashboard.css
src/components/: Live2DModel.tsx
src/hooks/: use-ducker.ts  use-i18n.ts
src/locales/: ar.json  de.json  en.json  es.json  fa.json  (+8 more)
(+89 files in other folders)
