[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde_yaml = "^0.9"
tokio = { version = "^1.44", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.27"
dunce = "1.0.5"
tauri = { version = "2.5.0", features = ["tray-icon"] }
parking_lot = "0.12"
once_cell = "1.21.1"
anyhow = "1.0.97"
chrono = {version = "^0.4", features = ["serde"] }
rand = "0.8.5"
scopeguard = "1.2.0"
delay_timer = "0.11.6"

tauri-plugin-log = "2.0.0-rc"
tauri-plugin-notification = "2"
rusqlite = { version = "0.34.0", features = ["bundled"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
